<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="642dp"
        android:layout_gravity="center"
        android:columnCount="2"
        android:rowCount="2">

        <!-- First Cell -->
        <LinearLayout
            android:id="@+id/bullet_cell"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bullet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bullet_symbol"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/bullet_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_minutes"
                android:textSize="20sp" />
        </LinearLayout>

        <!-- Second Cell -->
        <LinearLayout
            android:id="@+id/blitz_cell"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lightning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lightning_symbol"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/blitz_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five_minutes"
                android:textSize="20sp" />
        </LinearLayout>

        <!-- Third Cell -->
        <LinearLayout
            android:id="@+id/rapid_cell"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/clock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clock_symbol"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/rapid_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ten_minutes"
                android:textSize="20sp" />
        </LinearLayout>

        <!-- Fourth Cell -->
        <LinearLayout
            android:id="@+id/unlimited_cell"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/infinity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/infinity_symbol"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/unlimited_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unlimited"
                android:textSize="20sp" />
        </LinearLayout>

    </GridLayout>
    <Button
        android:id="@+id/save_button"
        android:layout_height="wrap_content"
        android:layout_width="350dp"
        android:text="@string/save_changes"
        android:layout_gravity="center"
        android:background="@drawable/round_button2"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:textSize="30sp"/>
</LinearLayout>

