<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_chess_foreground" />

        <TextView
            android:id="@+id/welcomeMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/welcome_msg"
            android:textColor="#1A76C6"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/logoTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:includeFontPadding="false"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="50sp" />

        <Button
            android:id="@+id/playBtn"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/round_button"
            android:text="@string/play"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/clockBtn"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/round_button2"
            android:text="@string/set_the_clock"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/clockTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/rapidClockTimeStr"
            android:textSize="20sp"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>